<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_food_places"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:fitsSystemWindows="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lbl_burpple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:paddingBottom="@dimen/margin_small"
                    android:shadowColor="@color/black_full"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="burpple"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_big"
                    android:textStyle="bold" />

                <com.rd.PageIndicatorView
                    android:id="@+id/pageIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:padding="@dimen/margin_large"
                    app:piv_animationType="worm"
                    app:piv_dynamicCount="true"
                    app:piv_interactiveAnimation="true"
                    app:piv_selectedColor="@color/primary"
                    app:piv_unselectedColor="@color/white_full"
                    app:piv_viewPager="@id/vp_food_places"
                    attrs:piv_padding="12dp"
                    attrs:piv_radius="8dp" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/tv_search_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:background="@drawable/bg_round_white"
                    android:drawablePadding="@dimen/margin_small"
                    android:drawableStart="@drawable/ic_search_gray_32dp"
                    android:hint="Search e.g. Japanese in Orchard"
                    android:padding="@dimen/margin_medium_2"
                    android:textSize="20sp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_featured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:text="@string/lbl_featured"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/lbl_promotions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/lbl_featured"
                    android:layout_below="@id/lbl_featured"
                    android:text="@string/lbl_promotions"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/btn_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/lbl_featured"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/btn_see_more"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_regular_2x" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_promotions">

                    <com.padcmyanmar.burpple.components.SmartRecyclerView
                        android:id="@+id/rv_promotions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xlarge" />

                    <include
                        android:id="@+id/vp_empty_promotions"
                        layout="@layout/view_pod_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_latest_burpple_guides"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:text="@string/lbl_latest"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/lbl_burpple_guides"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/lbl_latest_burpple_guides"
                    android:layout_below="@id/lbl_latest_burpple_guides"
                    android:text="@string/lbl_burpple_guides"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/btn_burpple_guides_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/lbl_latest_burpple_guides"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/btn_see_more"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_regular_2x" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_burpple_guides">

                    <com.padcmyanmar.burpple.components.SmartRecyclerView
                        android:id="@+id/rv_burpple_guides"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xlarge" />

                    <include
                        android:id="@+id/vp_empty_guides"
                        layout="@layout/view_pod_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_latest_new_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:text="@string/lbl_latest"
                    android:textAllCaps="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular" />

                <TextView
                    android:id="@+id/lbl_new_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/lbl_latest_new_trending"
                    android:layout_below="@id/lbl_latest_new_trending"
                    android:text="@string/lbl_new_and_trending"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_new_trending"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <include
                        android:id="@+id/vp_new_trending"
                        layout="@layout/view_pod_newly_opened"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/vp_trending_venues"
                        layout="@layout/view_pod_trending_venues"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background="#ABB2B9" />

            <TextView
                android:id="@+id/btn_explore_neighbourhoods"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/margin_xlarge"
                android:drawableStart="@drawable/ic_location_on_gray_32dp"
                android:padding="@dimen/margin_medium_3"
                android:text="@string/lbl_explore_neighbourhoods"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_3x" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/btn_explore_categories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/margin_xlarge"
                android:drawableStart="@drawable/ic_restaurant_gray_32dp"
                android:padding="@dimen/margin_medium_3"
                android:text="@string/lbl_explore_categories"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_3x" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:background="@color/divider" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
